--- a/src/004-git.md
+++ b/src/004-git.md
@@ -1,2 +1,12 @@
 # git 
 > 关于项目的 git 管理
+
+## desc
+```conf
+目前，直接在master分支上提交代码
+提交之前的三步曲：[issue/bugfix]
+git pull
+git add --all
+git commit -m "issue: 这里请认真填写"
+git push
+```
